# lab2_cpp

./: CMakeLists.txt  main.cpp
DiffClass/: main.cpp
DiffClass/deck/: deck.cpp  deck.h
DiffClass/tests/: CMakeLists.txt  testing.cpp
DiffClassSatic/: main.cpp
DiffClassSatic/deck/: CMakeLists.txt  deck.cpp  deck.h
DiffClassSatic/tests/: CMakeLists.txt  testing.cpp
DiffClassStatic/deck/: deck.cpp  deck.h
DiffClassStatic/tests/: testing.cpp
SimpleClass/cards/: cards.cpp  cards.h
SimpleClass/tests/: CMakeLists.txt  testing.cpp
cards/: cards.cpp  cards.h
deck/: CMakeLists.txt  deck.cpp  deck.h
tests/: testing.cpp
